Background applied on _app (instead of each section). Header Absolute. + .bg-primary/30 removed from each section. .bg-primary/30 & .color-fusion is now on _app.jsx>.mainBckgStyle. ; + header xl:absolute & xl:pt-[90px] ; + html, body, #__next .min-h-screen to fix app covering the whole screen height ;

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,11 +23,14 @@
   justify-content: center;
 }
 @layer base {
+  html, body, #__next {
+    @apply min-h-screen;
+  }
   body {
     @apply bg-secondary overflow-hidden leading-relaxed;
   }
   .page {
-    @apply w-full h-screen overflow-y-auto overflow-x-hidden xl:overflow-hidden flex flex-col;
+    @apply overflow-y-auto overflow-x-hidden xl:overflow-hidden min-h-screen;
   }
   main {
     @apply grow;
